Add a request to change VM power state
