# gen/swagger/v1/janna_api.swagger.json
@@ -110,6 +110,45 @@
           "JannaAPI"
         ]
       }
+    },
+    "/v1/vms/{vm_uuid}/power": {
+      "patch": {
+        "summary": "Change Virtual Machine power state.",
+        "operationId": "VMPower",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/v1VMPowerResponse"
+            }
+          },
+          "404": {
+            "description": "Returned when the resource does not exist.",
+            "schema": {
+              "format": "string"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "vm_uuid",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/VMPowerRequestVMPowerRequestBody"
+            }
+          }
+        ],
+        "tags": [
+          "JannaAPI"
+        ]
+      }
     }
   },
   "definitions": {
@@ -160,6 +199,18 @@
       ],
       "default": "TYPE_INVALID",
       "description": "Storage type. If 'cluster' type was chosen then Janna try to get DRS recommendation to choose proper 'datastore'.\n\n - TYPE_INVALID: zero value\n - TYPE_CLUSTER: cluster. DRS will be applied.\n - TYPE_DATASTORE: single datastore."
+    },
+    "VMPowerRequestVMPowerRequestBody": {
+      "type": "object",
+      "properties": {
+        "state": {
+          "type": "string"
+        },
+        "datacenter": {
+          "type": "string"
+        }
+      },
+      "description": "VMPowerRequestBody is a body of the request."
     },
     "v1AppInfoResponse": {
       "type": "object",
@@ -254,6 +305,9 @@
           }
         }
       }
+    },
+    "v1VMPowerResponse": {
+      "type": "object"
     }
   }
 }
